# iRobotStargazer_Navigator

./: CMakeLists.txt  CMakeLists.txt_witheverything  CMakeLists.txt_wow  README.md  mainpage.dox  manifest.xml
include/: bddint.h  bddusercpp.h  cross_prod.h  ltl2ba.h  memint.h  memuser.h  robot_mover.h  triangulate.h
include/irobot_stargazer/: robot_mover.h
src/: bruteforce_bfs.cpp  construct.c  lower_planner.cpp  lower_planner.cpp~  main.cpp  main.cpp~  main_0.cpp  misc.c  timeTest.c  timeTest.c~  tri.c
